--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,16 +8,19 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bower_components/bootstrap/dist/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="@routes.Assets.at("bower_components/jquery/dist/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("bower_components/bootstrap/dist/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("bower_components/angular/angular.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("bower_components/angular-resource/angular-resource.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("bower_components/ngmap/dist/ng-map.js")" type="text/javascript"></script>
     </head>
     <body>
     	<div class="header">
     	    <span class="title">Torque Log Analystic Tool</span>
     	    <div class="clearfix"></div>
     	</div>
-    	<div class="container">
+    	<div class="container-fluid">
         	@content
         </div>
     </body>
