--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 .header {
 	background:#336699;
 	text-align: center;
@@ -7,4 +8,25 @@
 }
 .title {
 	font-size: 18px;
+}
+
+.sessions li {
+	cursor:pointer;
+	border:1px solid #fff;
+	padding : 5px;
+}
+.sessions li:hover {
+	border:1px dashed #ddd;	
+}
+
+.sessions .active {
+	background: #cde;
+}
+
+.m-t-md {
+	margin-top: 10px;
+}
+
+dt, dd {
+	padding:5px 0px;
 }
