updated the button link

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,7 +22,7 @@
 	  <hr/>
 	  
 	  <ul class="list-unstyled m-t-md">
-	  	<li><a href="http://localhost:9000/assets/analytics/index.html#/dashboard/file/kpl?query=eml:@{username}">詳細油耗分析</a></li>
+	  	<li><a href="/assets/analytics/index.html#/dashboard/file/kpl?query=eml:@{username}">詳細油耗分析</a></li>
 	  </ul>
 	  
 	  
