--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,7 +3,7 @@
 @main("Login") {
 
 
-<div class="col-md-4 col-md-offset-4 text-center">
+<div class="col-sm-4 col-sm-offset-4 text-center">
 @flash.get("msg").map { msg =>
   <div class="has-error">
   <br/>
