--- a/app/views/inc/header.scala.html
+++ b/app/views/inc/header.scala.html
@@ -19,7 +19,22 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-cog"></i> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="@routes.Race.settings()">Settings</a></li>
+          <li><a href="@routes.User.profile()">Profile</a></li>
+
+	@reqHeader.optUserProfile.get.role match {
+	  
+	  case UserProfile.ROLE_admin => {
+	  	<li><a href="@routes.Admin.index()">Manage</a></li>
+	  }
+	  case UserProfile.ROLE_normal => {
+	  	
+	  }
+	  case UserProfile.ROLE_race => {
+	  	<li><a href="@routes.Race.settings()">Race Setting</a></li>
+	  }
+            
+	
+	}          
             <li class="divider"></li>
             <li><a href="@routes.Application.logout()">Logoff</a></li>
           </ul>
