--- a/app/views/inc/header.scala.html
+++ b/app/views/inc/header.scala.html
@@ -17,7 +17,8 @@
 
 	<ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-cog"></i> <span class="caret"></span></a>
+          
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">@reqHeader.optUserProfile.get.eml <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
           <li><a href="@routes.User.profile()">Profile</a></li>
             <li class="divider"></li>
